<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>fish.payara.extras</groupId>
  <artifactId>payara-diagnostics-tool</artifactId>
  <version>1.0</version>
  <packaging>glassfish-jar</packaging>

  <name>payara-diagnostics-tool</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>8</maven.compiler.source>
    <maven.compiler.target>8</maven.compiler.target>
    <payara.version>5.36.0</payara.version>
  </properties>

  <repositories>
    <repository>
        <id>payara-enterprise</id>
        <name>Payara Enterprise Private Artifacts</name>
        <url>https://nexus.dev.payara.fish/repository/payara-enterprise-artifacts-private/</url>
    </repository>
    <repository>
        <id>payara-nexus</id>
        <name>Payara Public Artifacts</name>
        <url>https://nexus.dev.payara.fish/repository/payara-artifacts/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>fish.payara.server.internal.admin</groupId>
      <artifactId>server-mgmt</artifactId>
      <version>${payara.version}</version>
    </dependency>
    <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.14.1</version>
        <scope>provided</scope>
    </dependency>
      <dependency>
          <groupId>com.squareup.okhttp3</groupId>
          <artifactId>okhttp</artifactId>
          <version>4.12.0</version>
      </dependency>
  </dependencies>

  <pluginRepositories>
    <pluginRepository>
        <releases>
            <enabled>true</enabled>
        </releases>
        <snapshots>
            <enabled>false</enabled>
        </snapshots>
        <id>payara-patched-externals</id>
        <name>Payara Patched Externals</name>
        <url>https://raw.github.com/payara/Payara_PatchedProjects/master</url>
    </pluginRepository>
  </pluginRepositories>

  <build>
    <finalName>${project.name}</finalName>
      <plugins>
        <plugin>
            <groupId>org.glassfish.build</groupId>
            <artifactId>glassfishbuild-maven-plugin</artifactId>
            <version>3.2.20.payara-p2</version>
            <extensions>true</extensions>
            <configuration>
                <dir>${project.build.directory}/classes</dir>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.glassfish.hk2</groupId>
            <artifactId>hk2-inhabitant-generator</artifactId>
            <version>2.6.1.payara-p1</version>
            <executions>
                <execution>
                    <goals>
                        <goal>generate-inhabitants</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <supportedProjectTypes>jar,glassfish-jar</supportedProjectTypes>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.felix</groupId>
            <artifactId>maven-bundle-plugin</artifactId>
            <version>5.1.8</version>
            <executions>
                <execution>
                    <id>default-manifest</id>
                    <phase>process-classes</phase>
                    <goals>
                        <goal>manifest</goal>
                    </goals>
                    <configuration>
                        <instructions>
                            <_include>-osgi.bundle</_include>
                        </instructions>
                        <excludeDependencies>tools-jar</excludeDependencies>
                        <supportedProjectTypes>
                            <supportedProjectType>glassfish-jar</supportedProjectType>
                            <supportedProjectType>jar</supportedProjectType>
                        </supportedProjectTypes>
                    </configuration>
                </execution>
            </executions>
            <configuration>
                <Export-Package />
                <instructions>
                    <_include>-osgi.bundle</_include>
                </instructions>
                <excludeDependencies>tools-jar</excludeDependencies>
                <supportedProjectTypes>
                    <supportedProjectType>glassfish-jar</supportedProjectType>
                    <supportedProjectType>jar</supportedProjectType>
                </supportedProjectTypes>
            </configuration>
        </plugin>
    </plugins>

    <pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.glassfish.hk2</groupId>
                <artifactId>osgiversion-maven-plugin</artifactId>
                <version>2.6.1</version>
            </plugin>
            <plugin>
                <groupId>org.glassfish.build</groupId>
                <artifactId>command-security-maven-plugin</artifactId>
                <version>1.0.13</version>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>default-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>fish.payara.extras.diagnostics.App</mainClass>
                            <addClasspath>true</addClasspath>
                            <classpathLayoutType>custom</classpathLayoutType>
                            <customClasspathLayout>${artifact.artifactId}.${artifact.extension}</customClasspathLayout>
                        </manifest>
                        <manifestFile>${project.build.directory}/classes/META-INF/MANIFEST.MF</manifestFile>
                        <manifestEntries>
                            <Implementation-Version>${project.version}</Implementation-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <excludeGroupIds>
                        fish.payara.server.internal.common,
                        fish.payara.server.internal.admingui,
                        jakarta
                    </excludeGroupIds>
                    <excludeTransitive>true</excludeTransitive>
                    <outputDirectory>${project.build.directory}</outputDirectory>
                </configuration>
            </plugin>
        </plugins>
    </pluginManagement>
  </build>
</project>